// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Custom/Decorator for Vue Render 1`] = `
<div
  style="border: medium solid blue;"
>
  <div
    style="border: medium solid red;"
  >
    <button
      class="button"
      style="color: pink; border-color: pink;"
    >
      renders component: MyButton
    </button>
  </div>
</div>
`;

exports[`Storyshots Custom/Decorator for Vue Template 1`] = `
<div
  style="border: medium solid blue;"
>
  <div
    style="border: medium solid red;"
  >
    <button
      class="button"
      style="color: rgb(66, 185, 131); border-color: #42b983;"
    >
      MyButton with template
    </button>
  </div>
</div>
`;

exports[`Storyshots Custom/Decorator for Vue With Data 1`] = `
<div
  style="border: medium solid blue;"
>
  <div
    style="border: medium solid red;"
  >
    <pre>
      {
  "componentId": "custom-decorator-for-vue",
  "title": "Custom/Decorator for Vue",
  "kind": "Custom/Decorator for Vue",
  "id": "custom-decorator-for-vue--with-data",
  "name": "With Data",
  "story": "With Data",
  "parameters": {
    "docs": {
      "iframeHeight": "60px"
    },
    "framework": "vue",
    "globalParameter": "globalParameter",
    "__isArgsStory": true,
    "__id": "custom-decorator-for-vue--with-data",
    "args": {},
    "argTypes": {}
  },
  "initialArgs": {},
  "argTypes": {},
  "args": {},
  "globals": {},
  "viewMode": "story",
  "customContext": 52
}
    </pre>
  </div>
</div>
`;
